<resources>
    <string name="generic_open">Open</string>
    <string name="generic_close">Close</string>
    <string name="generic_return">Return</string>
    <string name="generic_edit">Edit</string>
    <string name="generic_share">Share</string>
    <string name="generic_move">Move</string>
    <string name="generic_add">New</string>
    <string name="generic_clone">Clone</string>
    <string name="generic_paste">Paste</string>
    <string name="generic_delete">Delete</string>
    <string name="generic_refresh">Refresh</string>
    <string name="generic_rename">Rename</string>
    <string name="generic_more">More</string>
    <string name="generic_search">Search</string>
    <string name="generic_tip">Tip</string>
    <string name="generic_confirm">Confirm</string>
    <string name="generic_unknown">Unknown</string>
    <string name="generic_warning">Warning</string>
    <string name="generic_ok">OK</string>
    <string name="generic_error">Error</string>
    <string name="generic_load">Load</string>
    <string name="generic_name">Name</string>
    <string name="generic_restart">Restart</string>
    <string name="generic_reset">Reset</string>
    <string name="generic_save">Save</string>
    <string name="generic_unpacking">Unpacking %s</string>
    <string name="generic_error_field_empty">This field cannot be empty</string>
    <string name="generic_keyboard">Keyboard</string>
    <string name="generic_waiting">Please wait</string>
    <string name="generic_select">Select</string>
    <string name="generic_default">Default</string>
    <string name="generic_loading">Loading</string>
    <string name="generic_optional">Optional</string>
    <string name="generic_required">Required</string>
    <string name="generic_all">All</string>
    <string name="generic_wan">Ten Thousand</string>
    <string name="generic_yi">Billion</string>
    <string name="generic_login">Login</string>
    <string name="generic_wrong_tip">Something went wrong</string>
    <string name="generic_no_more_reminders">No more reminders</string>
    <string name="generic_input_invalid">The input is invalid, please try again</string>
    <string name="generic_input_invalid_character">The name contains an invalid character: "%s"</string>
    <string name="generic_input_too_small">The value is too small, it must be at least %s</string>
    <string name="generic_input_too_big">The value is too big, it can be at most %s</string>
    <string name="generic_copied">Copied</string>
    <string name="generic_saved">Saved</string>
    <string name="generic_release">Release</string>
    <string name="generic_debug">Debug</string>
    <string name="generic_pre_release">Pre-release</string>
    <string name="generic_beta">Beta</string>
    <string name="generic_alpha">Alpha</string>
    <string name="error_fatal">%s crashed unexpectedly</string>
    <string name="error_no_version">No version!</string>
    <string name="error_show_more">Show details</string>
    <string name="error_show_less">Hide details</string>
    <string name="option_category_debug">Debug</string>
    <string name="option_category_control">Control</string>
    <string name="option_category_hotbar">Hotbar Detection Box</string>
    <string name="option_force_close">Force Close</string>
    <string name="option_log_out">Log Output</string>
    <string name="option_send_custom_key">Send Custom Key Code</string>
    <string name="option_edit_controls">Edit Control Layout</string>
    <string name="option_hotbar_type">Hotbar Detection Mode</string>
    <string name="option_hotbar_type_auto">Adaptive (may be inaccurate)</string>
    <string name="option_hotbar_type_manually">Manual Adjustment</string>
    <string name="option_hotbar_width">Detection Box Width</string>
    <string name="option_hotbar_height">Detection Box Height</string>
    <string name="customctrl_editor_exit_title">Exit?</string>
    <string name="customctrl_editor_exit_msg">The current modifications will not be saved. Are you sure you want to exit directly?</string>
    <string name="customctrl_editor_exit">Exit Editor</string>
    <string name="global_save_and_exit">Save and Exit</string>
    <string name="version_snapshot">Snapshot</string>
    <string name="version_alpha">Alpha</string>
    <string name="version_beta">Beta</string>
    <string name="force_exit_confirm">Are you sure you want to force close?</string>
    <string name="autoram_info_msg">Memory set to %d MB</string>
    <string name="memory_warning_msg">The available memory (%d) is lower than the allocated memory (%d), which may cause the game to crash. If the game crashes, please change the configuration!</string>
    <string name="address_memory_warning_msg">The available free memory space (%d) is lower than the allocated memory (%d), which will cause a crash. If the game crashes, please adjust the memory allocation.</string>
    <string name="notif_channel_name">General</string>
    <string name="lazy_service_default_title">%s Front Desk Service</string>
    <string name="progresslayout_tasks_in_progress">%d tasks in progress</string>
    <string name="notification_terminate">Terminate</string>
    <string name="notification_game_runs">The game is running!</string>
    <string name="tasks_ongoing">Tasks are being executed, please wait</string>
    <string name="mc_download_failed">Failed to download Minecraft! This may be due to poor network connection, incorrect file placement, etc.</string>
    <string name="microsoft_login_retry_later">Your actions are too frequent, please try again later</string>
    <string name="storage_required">%s requires external storage, please reconnect and restart the software</string>
    <string name="dialog_select_jar">Select Jar File</string>
    <string name="percent_format" translatable="false">%d%%</string>
    <string name="version_select_hint">Select Version</string>
    <string name="notif_error_occured">An error occurred</string>
    <string name="notif_error_occured_desc">Click to view details</string>
    <string name="input_preview_tip">Input preview box, capturing soft keyboard input, for reference only:</string>
    <string name="dl_tampered_manifest_title">File Verification Warning</string>
    <string name="dl_tampered_manifest"><![CDATA[The game version manifest on the mirror does not match the official Mojang version manifest, which means it may have been tampered with.<br/>
        <b>This is not safe. Your personal information may be at risk if you continue.</b><br/>
        If you still want to use the mirror, press \"Turn off manifest checks\" and start the download again.<br/>
        If you want to use the official download source, press \"Switch to official site\" and start the download again.<br/>]]></string>
    <string name="dl_turn_off_manifest_checks">Turn off game version list checks</string>
    <string name="dl_switch_to_official_site">Switch to official download source</string>
    <string name="notif_download_finished">The game is ready to launch</string>
    <string name="notif_download_finished_desc">Click here to launch it!</string>
    <string name="notification_permission_dialog_title">Permission Request</string>
    <string name="notification_permission_dialog_text">%s requires notification permission to prevent game file downloads from stopping when you leave the app. Without this permission, Android may stop your download progress when %s is in the background.</string>
    <string name="notification_permission_toast">You can change your mind at any time by going to \"System Settings\"</string>
    <string name="newdl_starting">Reading game metadata…</string>
    <string name="newdl_downloading_metadata">Downloading game metadata (%s)</string>
    <string name="newdl_downloading_game_files">Downloading game files… (%d/%d, %.2f MB)</string>
    <string name="newdl_downloading_game_files_size">Downloading game files… (%.2f/%.2f MB, %.2f MB/s)</string>
    <string name="log_view_button_scroll_off">Auto-scroll: Off</string>
    <string name="log_view_button_scroll_on">Auto-scroll: On</string>
    <string name="log_view_button_output_off">Output: Off</string>
    <string name="log_view_button_output_on">Output: On</string>
    <string name="log_view_label_log_output">Log Output:</string>
    <string name="execute_jar_failed_to_read_file">Failed to read .jar file</string>
    <string name="execute_jar_incompatible_runtime">Executing .jar feature is incompatible with Java %d</string>
    <string name="open_link">Will access this link in the browser:</string>
    <string name="mod_download_progress">Downloading installer for %s</string>
    <string name="mod_forge_searching">Searching for Forge version number</string>
    <string name="mod_neoforge_searching">Searching for NeoForge version number</string>
    <string name="mod_forge_custom_version">Modifying version name</string>
    <string name="mod_failed_to_load_list">Failed to load version list!</string>
    <string name="mod_optifine_progress">Downloading %s</string>
    <string name="control_primary">Left Click</string>
    <string name="control_secondary">Right Click</string>
    <string name="control_mouse">Mouse</string>
    <string name="control_mouseoff">Mouse: Off</string>
    <string name="control_mouseon">Mouse: On</string>
    <string name="customctrl_toggle">Toggleable</string>
    <string name="customctrl_size">Size</string>
    <string name="customctrl_mapping">Mapping</string>
    <string name="customctrl_orientation">Orientation</string>
    <string name="customctrl_background_color">Background Color</string>
    <string name="customctrl_corner_radius">Corner Radius</string>
    <string name="customctrl_stroke_width">Stroke Width</string>
    <string name="customctrl_stroke_color">Stroke Color</string>
    <string name="customctrl_button_opacity">Button Opacity</string>
    <string name="customctrl_addbutton">Add Button</string>
    <string name="customctrl_addbutton_drawer">Add Drawer</string>
    <string name="customctrl_addbutton_joystick">Add Joystick</string>
    <string name="customctrl_addsubbutton">Add Sub-Button</string>
    <string name="customctrl_selectdefault">Select Default Control Layout</string>
    <string name="customctrl_export">Save and Share</string>
    <string name="customctrl_passthru">Mouse Passthrough</string>
    <string name="customctrl_swipeable">Swipeable</string>
    <string name="customctrl_forward_lock">Forward Lock</string>
    <string name="customctrl_absolute_tracking">Force Finger Tracking</string>
    <string name="controls_tip">Tap the gear icon to open the menu ⚙\nTap a button to customize: edit, resize, delete, or remap</string>
    <string name="controls_add_control_button">Button</string>
    <string name="controls_add_control_drawer">Drawer</string>
    <string name="controls_visibility">Visibility</string>
    <string name="controls_in_game">In-Game</string>
    <string name="controls_in_menu">In-Menu</string>
    <string name="controls_orientation_up">Up</string>
    <string name="controls_orientation_down">Down</string>
    <string name="controls_orientation_left">Left</string>
    <string name="controls_settings_button_snapping">Button Snapping</string>
    <string name="controls_settings_button_snapping_distance">Button Snapping Distance</string>
    <string name="controls_info_file_name">File Name:</string>
    <string name="controls_info_name">Layout Name:</string>
    <string name="controls_info_version">Layout Version:</string>
    <string name="controls_info_author">Author:</string>
    <string name="controls_info_desc">Description:</string>
    <string name="controls_info_more">More Info</string>
    <string name="pedit_control">Control Layout</string>
    <string name="other_login_email">Email or Username</string>
    <string name="other_login_password">Password</string>
    <string name="other_login_registry_now">No account? Click here to register one!</string>
</resources>