<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_card"
    android:padding="@dimen/_8sdp"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:gravity="center_horizontal"
        android:text="@string/option_edit_controls"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black_or_white"
                android:text="@string/option_edit_controls"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/text_background_fill"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/customctrl_addbutton"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/add_drawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/customctrl_addbutton_drawer"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/add_joystick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/customctrl_addbutton_joystick"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="bold"
                android:textColor="@color/black_or_white"
                android:text="@string/generic_save"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/text_background_fill"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/generic_load"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/generic_save"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/save_and_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/global_save_and_exit"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/save_and_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/customctrl_export"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="bold"
                android:textColor="@color/black_or_white"
                android:text="@string/pedit_control"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/text_background_fill"/>

            <com.movtery.zalithlauncher.ui.layout.AnimRelativeLayout
                android:id="@+id/snapping_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:padding="@dimen/_8sdp">

                <TextView
                    android:id="@+id/snapping_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_toStartOf="@+id/snapping"
                    android:text="@string/controls_settings_button_snapping"
                    android:textColor="@color/black_or_white" />

                <Switch
                    android:id="@+id/snapping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </com.movtery.zalithlauncher.ui.layout.AnimRelativeLayout>

            <LinearLayout
                android:id="@+id/snapping_distance_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/controls_settings_button_snapping_distance"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/snapping_distance_remove"
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_horizontal"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:text="-"
                        android:textSize="@dimen/_16sdp"
                        tools:ignore="HardcodedText" />

                    <SeekBar
                        android:id="@+id/snapping_distance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/snapping_distance_remove"
                        android:layout_toStartOf="@id/snapping_distance_add"
                        android:max="30"/>

                    <TextView
                        android:id="@+id/snapping_distance_add"
                        android:layout_width="@dimen/_16sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_4sdp"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/snapping_distance_value"
                        android:gravity="center_horizontal"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:text="+"
                        android:textSize="@dimen/_16sdp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/snapping_distance_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/background_text"
                        tools:text="0"/>

                </RelativeLayout>

            </LinearLayout>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/select_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/customctrl_selectdefault"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

            <com.movtery.zalithlauncher.ui.view.AnimTextView
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/background_item"
                android:text="@string/customctrl_editor_exit"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_8sdp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>