<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/_450sdp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/server_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:text="@string/other_login_email"/>

    <com.movtery.zalithlauncher.ui.view.AnimEditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:autofillHints="emailAddress"
        android:background="@drawable/background_edit_box"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/_8sdp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:text="@string/other_login_password"/>

    <com.movtery.zalithlauncher.ui.view.AnimEditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:autofillHints="password"
        android:background="@drawable/background_edit_box"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_8sdp"
        android:textSize="@dimen/_16ssp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/registry_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/other_login_registry_now"
        android:textColor="@android:color/holo_green_dark"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.movtery.zalithlauncher.ui.view.AnimButton
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_2sdp"
            android:text="@android:string/cancel" />

        <com.movtery.zalithlauncher.ui.view.AnimButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/generic_login" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>